development-runs/360/k8s/prod/quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  namespace: sme-app
  labels:
    app: quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes
  template:
    metadata:
      labels:
        app: quotes
    spec:
      containers:
        - name: quotes
          image: ralfx22/sme-quotes:v2
          ports:
            - containerPort: 5000
              protocol: TCP
